# TinyPHP

./: .gitattributes  .gitignore  BENCHMARK_RESULTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  EXT_IMPLEMENTATION.md  FUNCTIONS.md  GRAMMAR.md  LICENSE  OPTIMIZATION_TODO.md  QUICK_START.md  README.md  ROADMAP.md  _test_fio.txt  build.cmd  build.php  build.sh  run_regression.ps1  tester.php  tphp  tphp.cmd  tphp.php
.github/scripts/: run_tests.php
.github/workflows/: build.yml  test.yml  (+2 more)
bench/: bench_cmp.php  bench_full.php  bench_json.php  bench_min.php  bench_nest.php  bench_php.php  bench_php_final.php  bench_tphp.php  bench_tphp_final.php  json_bench.php  quick.php  run_bench.php  simple.php  test_9dig.php  test_big.php  test_int.php  test_min.php  test_neg.php  test_notag.php  test_pos.php
ext/: .gitignore  CMakeLists.txt
ext/libevent/: CMakeLists.txt  build.sh
ext/libevent/src/: event.c  event.h  event.php
ext/libevent/tcc-stubs/: iphlpapi.h  mswsock.h  netioapi.h  win32_stubs.c  wincrypt.h
ext/libevent/tcc-stubs/sys/: param.h
include/: array.h  builtin.h  builtin_extra.h  builtin_full.h  common.h  compat.h  conv.h  ext_str.h  fileinfo.h  filter.h  function.h  hash.h  iconv.h  math.h  mco_arm64_macos.s  minicoro.h  p2c.h  phpc.h  rand.h  runtime.h  str_builder.h  tphp_math.h  types.h  val.h
src/: CodeGenerator.php  CodeGeneratorWindows.php  Compiler.php  ELFWriter.php  Lexer.php  PEWriter.php  Parser.php  SymbolTable.php  Token.php  TokenType.php  Validator.php  X64Builder.php
tcc/: linux.sh
test/: verify_catch.php  verify_hash_index.php
(+439 files in other folders)
