cmake_minimum_required(VERSION 3.14)
project(libevent-build C)

set(CMAKE_BUILD_TYPE Release CACHE STRING "" FORCE)
set(CMAKE_POLICY_VERSION_MINIMUM 3.5 CACHE STRING "" FORCE)

set(EVENT__LIBRARY_TYPE "STATIC" CACHE STRING "" FORCE)
set(EVENT__DISABLE_OPENSSL       ON CACHE BOOL "" FORCE)
set(EVENT__DISABLE_THREAD_SUPPORT ON CACHE BOOL "" FORCE)
set(EVENT__DISABLE_TESTS          ON CACHE BOOL "" FORCE)
set(EVENT__DISABLE_SAMPLES        ON CACHE BOOL "" FORCE)
set(EVENT__DISABLE_BENCHMARK      ON CACHE BOOL "" FORCE)
set(EVENT__DISABLE_REGRESS        ON CACHE BOOL "" FORCE)
set(EVENT__DISABLE_DEBUG_MODE     ON CACHE BOOL "" FORCE)
set(EVENT__DISABLE_CLOCK_GETTIME  ON CACHE BOOL "" FORCE)

add_subdirectory(package build)
